fixed script import

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
                 <button id="i-back-button">Back</button>
             </div>
         </div>
-        <script src="Game.js"></script>
+        <script src="game.js"></script>
     </body>
 </html>
